# DKAvr

./: CMakeLists.txt
core/: CMakeLists.txt
core/include/SerialPort/: SerialPort.h
core/src/SerialPort/: SerialPort.cpp
gui/: CMakeLists.txt
gui/include/: MainWindow.h
gui/src/: MainWindow.cpp  MainWindow.ui
main/: CMakeLists.txt
main/src/: main.cpp
